--- a/procoding-landing-new/package.json
+++ b/procoding-landing-new/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "accept-language": "^3.0.20",
     "next": "15.5.0",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
